--- a/ЛР6.md
+++ b/ЛР6.md
@@ -112,6 +112,61 @@
 
 
 # Хід роботи (Видиборець Назар)
+
+### Таблиця-опис команд
+
+| Команда | Опис |
+|---------|------|
+| `mkdir mybackups` | Створення нової директорії `mybackups` у домашньому каталозі користувача. |
+| `tar -cvf mybackups/udev.tar /etc/udev` | Команда `tar` використовується для об’єднання кількох файлів в один файл. В даному випадку вміст директорії `/etc/udev` буде збережено в архів `udev.tar` у директорії `mybackups`. Параметр `-c` повідомляє команді `tar` створити файл tar. Параметр `-v` означає "verbose", який наказує команді `tar` продемонструвати, що вона робить. Параметр `-f` використовується для вказівки назви файлу tar. |
+| `gzip 'назва файлу'` | Виконує стиснення поточного файлу, змінюючи його формат на `.gz`, використовує алгоритм стиснення Lempel-Ziv. |
+| `gzip -l 'назва файлу'` | Виводить інформацію про стиснення поточного файлу. |
+| `gunzip 'назва стиснутого файлу'` | Декомпресує файл, тобто повертає його до первинного стану. |
+| `gzip -d` | Те саме, що й `gunzip`. |
+| `bzip` | Виконує стиснення за алгоритмом "Burrows-Wheeler block sorting", змінює формат на `.bz`. |
+| `bunzip` | Декомпресує файл формату `.bz`. |
+| `xz` | Виконує стиснення за алгоритмом "Lempel-Ziv-Markov (LZMA)", змінює формат на `.xz`. |
+| `unxz` | Декомпресує файл формату `.xz`. |
+| `tar -c [-f ARCHIVE] [OPTIONS] [FILE...]` | Створення архіву. Замість `ARCHIVE` може бути будь-яка назва для архіву. Замість `FILE` повинна бути назва файлу чи файлів, які будуть заархівовані. |
+| `tar -cf alpha_files.tar alpha*` | Приклад минулої команди. Всі файли, що починаються на `alpha`, будуть включені до архіву `alpha_files.tar`. |
+| `tar -czf alpha_files.tar.gz alpha*` | З параметром `-z` виконує стиснення архіву за допомогою команди `gzip`. |
+| `tar -cjf folders.tbz School` | Разом з параметром `-j` виконує стиснення за допомогою команди `bzip2`. |
+| `tar -tjf folders.tbz` | Параметр `-t` використовується для виведення списку файлів в архіві, а `-j` в даному випадку декомпресує файли за допомогою команди `bunzip2`. |
+| `tar -xjf folders.tbz` | Параметр `-x` використовується для розархівування файлів. |
+| `tar -xjvf folders.tbz` | Параметр `-v` виводить почергово виводить на екран файли, що розархівовуються. |
+| `tar -xjvf folders.tbz School/Art/linux.txt` | Додаючи в кінці назву файлу (`School/Art/linux.txt`), лише цей файл буде розархівований. |
+| `zip alpha_files.zip alpha*` | Архівує файли в формат `.zip`. Також після виконання показує на скільки файли були стиснуті у %. |
+| `zip -r School.zip School` | Те ж, що й попередня команда, але з рекурсією. |
+| `unzip -l School.zip` | Виводить список файлів в архіві. |
+| `unzip School.zip` | Виконує розархівування файлів, до кожного файлу дає певну опцію розархівування. Файли розархівовуються в поточний каталог, тому щоб уникнути незручностей з опціями можна скопіювати архів в новий каталог та розархівувати його там. |
+| `unzip School.zip School/Math/numbers.txt` | Розархівовує файл, який прописаний в кінці. |
+| `cat food.txt` | Виводить вміст текстового файлу `food.txt`. |
+| `less` | Виводить зміст файлу посторінково з можливістю переміщення по змісту. |
+| `more` | Виводить зміст файлу посторінково з можливістю переміщення лише вперед. |
+| `head /etc/sysctl.conf` | Виводить 10 перших рядків з файлу. |
+| `tail -5 /etc/sysctl.conf` | Виводить останні 5 рядків з файлу. |
+| `head -n 3 /etc/sysctl.conf` | Виводить перші 3 рядки. |
+| `tail -n +25` | Відображає вміст файлу з 25-го рядка і до кінця. |
+| `nl` | Номерує те, що виводить команда, наприклад, `ls`. |
+| `sort mypasswd` | Сортує зміст файлу `mypasswd` за алфавітним порядком. |
+| `sort -t: -n -k3 mypasswd` | Сортує зміст файлу. `-t` відповідає за розмежування, `-k` відповідає на номер поля сортування (в нашому випадку це третє, бо `-k3`), `-n` відповідає за тип сортування. |
+| `wc /etc/passwd /etc/passwd-` | Виводить статистику файлу: кількість байт, слів, рядків та назву файлу. |
+| `cut -d: -f1,5-7 mypasswd` | Виводить колонки з файлу. `-d` відповідає за розділення виведених даних за допомогою табуляції, `-f` визначає які поля виводити. |
+| `grep --color bash /etc/passwd` | Фільтрує вміст файлу та виводить його чи результат іншої команди. Параметр `--color` відповідає за підсвічення результатів сортування (в нашому випадку будуть підсвічуватись всі слова `bash` у виводі). |
+| `grep -c bash /etc/passwd` | Виводить кількість підходящих рядків. |
+| `grep -n bash /etc/passwd` | Виводить колонки з файлу та підписує їх номер в файлі. |
+| `grep -v nologin /etc/passwd` | За допомогою `-v` виведе всі рядки, що не включають слово (в нашому випадку `nologin`). |
+| `grep '....' red.txt` | Виведе всі слова, що містять 4 символи з текстового файлу (`.` відповідає за 1 символ). |
+| `grep '[^0-9]' profile.txt` | Виведе всі рядки, що включають числа 0-9 і підсвітить всі символи, крім чисел. |
+| `grep 're*d' red.txt` | Виведе рядки, в яких слово починається на `re` і закінчується на `d` (`*` відповідає за кількість символів від 0 до нескінченності). |
+| `grep '^root' /etc/passwd` | Виведе рядки, які починаються словом `root`. |
+| `grep 'r$' alpha-first.txt` | Виведе рядки, які закінчуються буквою `r`. |
+| `grep 're\*' newhome.txt` | Виведе рядки, в яких є саме частинка `re`. |
+| `grep -E 'e+' red.txt` | Виведе рядки, в яких є один та більше символів `е`. |
+| `grep -E 'gray\|grey' spelling.txt` | Виведе рядки, в яких є слова `gray` або `grey`. |
+
+![Image](https://github.com/user-attachments/assets/2f711148-ab1f-47fd-8188-67a57f75a1d8)
+
 ### Порівняльна характеристика процесів стискання та архівування
 
 **Стискання**:
