--- a/ЛР7.md
+++ b/ЛР7.md
@@ -1,1 +1,207 @@
+---
+# Тема: “Створення скриптових сценаріїв та визначення апаратної конфігурації системи”
 
+# Мета роботи: 
+Отримання практичних навиків роботи з командною оболонкою Bash.
+Знайомство знайомство з базовими діями при роботі зі скриптовими сценаріями.
+
+
+## Cловник базових англійських термінів (Видиборець Назар)
+
+1. **`Shell script`** – Text file with executable commands run by a shell.  
+2. **`Executable`** – File or script with permission to run.  
+3. **`Command`** – Instruction executed by the shell or script.  
+4. **`#!` (Shebang)** – Line specifying the interpreter (e.g., `#!/bin/bash`).  
+5. **`Interpreter`** – Program running the script (e.g., `sh`, `bash`).  
+6. **`echo`** – Command to print text (e.g., `echo "Hello, World!"`).  
+7. **`chmod`** – Command to change file permissions (e.g., `chmod +x script.sh`).  
+8. **`Permission denied`** – Error when a file lacks execution rights.  
+9. **`$PATH`** – Environment variable defining executable search paths.  
+10. **`./`** – Prefix to run a file from the current directory (e.g., `./test.sh`).  
+11. **`Text editor`** – Tool for editing files (e.g., `nano`, `vim`).  
+12. **`nano`** – Simple terminal-based editor for script editing.  
+13. **`Ctrl+X`** – Shortcut to exit `nano`.  
+14. **`Ctrl+O`** – Shortcut to save a file in `nano` without exiting.  
+15. **`Ctrl+K`** – Shortcut to cut a line in `nano`.  
+16. **`Ctrl+U`** – Shortcut to paste cut text in `nano`.  
+17. **`Variables`** – Store temporary data in a script (e.g., `name="Alice"`).  
+18. **`Conditionals`** – Execute actions based on tests (e.g., `if [ $x -eq 5 ]; then`).  
+19. **`Loops`** – Repeat actions in a script (e.g., `for`, `while`).  
+20. **`Bash`** – Bourne Again Shell, a common script interpreter.
+
+---
+
+# Відповіді на питання
+
+
+## 1. Що таке скриптовий сценарій у командній оболонці?  
+**Скриптовий сценарій** – це текстовий файл з послідовністю команд, які виконуються інтерпретатором командного рядка (наприклад, `bash`).  
+- **Призначення**: автоматизація задач (наприклад, резервне копіювання, налаштування сервера).  
+- **Особливості**:  
+  - Містить змінні, умовні оператори (`if-else`), цикли (`for`, `while`).  
+  - Починається з **шебангу** (`#!/bin/bash`), що вказує на інтерпретатор.  
+- **Приклад**:  
+  bash
+  #!/bin/bash
+  echo "Hello, World!"
+  
+## 2. Як створити, відредагувати та запустити скрипт?
+**Створення/редагування:**
+1. Відкрийте текстовий редактор (наприклад, nano): nano myscript.sh
+2. Додайте шебанг на початку файлу: #!/bin/bash
+3. Напишіть команди (наприклад, echo "Це мій скрипт!").
+
+**Напишіть команди (наприклад, echo "Це мій скрипт!").**
+1. Надайте права на виконання: chmod +x myscript.sh
+2. Виконайте скрипт: ./myscript.sh        # з поточної директорії або bash myscript.sh     # без прав на виконання
+
+## 3. Основні компоненти материнської плати
+
+- **Процесорний сокет**: роз’єм для встановлення CPU.
+- **Слоти RAM**: для оперативної пам’яті.
+- **Чіпсет**: координує роботу компонентів.
+- **PCI-Express**: для відеокарт, SSD тощо.
+- **BIOS/UEFI**: прошивка для налаштування апаратури.
+- **SATA/M.2**: підключення жорстких дисків та SSD.
+- **Роз’єми живлення (ATX, EPS)**.
+- **Порти I/O**: USB, HDMI, Ethernet, аудіо.
+
+## 4. MBR та GPT – для чого використовуються?
+
+### MBR (Master Boot Record)
+- **Призначення**: розділи на HDD/SSD (старий стандарт).
+- **Обмеження**:
+  - Диски до 2 ТБ.
+  - Максимум 4 основні розділи.
+- **Сумісність**: BIOS.
+
+### GPT (GUID Partition Table)
+- **Призначення**: сучасний стандарт для HDD/SSD.
+- **Переваги**:
+  - Підтримка дисків >2 ТБ.
+  - Необмежена кількість розділів.
+- **Сумісність**: UEFI (Windows 10+, Linux).
+
+## 5. Що таке монтування та навіщо воно?
+
+**Монтування** – це підключення файлової системи пристрою (наприклад, флешки, диска) до директорії в Linux/Unix.
+
+### Навіщо потрібно:
+- Доступ до даних на зовнішніх носіях.
+- Робота з віртуальними образами (ISO).
+
+### Приклад:
+bash
+mount /dev/sdb1 /mnt/usb    # Монтування флешки
+umount /mnt/usb             # Демонтування
+
+---
+
+## Таблиця для опису цих команд NDG Linux Essentials - Lab 11: Basic Scripting та Lab 12: Understanding Computer Hardware. 
+
+| Назва команди            | Її призначення та функціональність                                                                 |
+|--------------------------|----------------------------------------------------------------------------------------------------|
+| `lscpu`                  | Виводить детальну інформацію про процесор: архітектуру, кількість ядер, модель, частоту тощо.      |
+| `head -n 20 /proc/cpuinfo` | Показує перші 20 рядків файлу `/proc/cpuinfo` для перегляду детальних характеристик CPU, включаючи "flags". |
+| `free -m` або `free -g`  | Відображає обсяг використаної та вільної оперативної пам’яті та swap (у мегабайтах або гігабайтах). |
+| `lspci`                  | Перелічує пристрої, підключені до шини PCI, наприклад, відеокарти, мережеві адаптери тощо.         |
+| `lspci -k`               | Показує пристрої PCI разом із драйверами та модулями ядра, які їх підтримують.                     |
+| `lsusb`                  | Виводить список підключених USB-пристроїв, таких як флешки, миші, клавіатури.                      |
+| `lsmod`                  | Відображає завантажені модулі ядра, їх розмір та залежності між ними.                              |
+| `fdisk -l`               | Неінтерактивно виводить таблиці розділів дисків, показуючи структуру та типи розділів.             |
+
+---
+
+![Image](https://github.com/user-attachments/assets/eba15e7f-4682-40d5-abda-aace9c7c339b)
+![Image](https://github.com/user-attachments/assets/d9e81615-014a-48b9-9398-11b51e8f6f7b)
+![Image](https://github.com/user-attachments/assets/ea9a8256-f292-42de-a051-cabcdcb658dc)
+![Image](https://github.com/user-attachments/assets/601597cf-6133-4353-bd8d-d24173cad292)
+![Image](https://github.com/user-attachments/assets/7bd43acc-1361-413d-b6ec-9fdcccc4d41c)
+
+# Відповіді на контрольні запитання
+
+### 1. Відмінність між `arch` та `lscpu`
+- **`arch`**: Показує лише архітектуру CPU (наприклад, `x86_64`).
+bash
+  arch
+
+- **`lscpu`**: Надає детальну інформацію про CPU (архітектура, ядра, модель, частота).
+bash
+  lscpu
+
+- **Відмінність**: `arch` — лише архітектура, `lscpu` — повна інформація.
+
+---
+
+### 2. Команда для стану RAM
+- **`free`**: Показує використання RAM та swap.
+bash
+  free -m
+
+  Вивід:
+  total  used  free  shared  buff/cache  available
+  Mem:  64298 12937 5837  26      45523      50616
+  Swap: 8191  0    8191
+
+
+---
+
+### 3. Змінні, розгалуження та цикли у скриптах
+- **Змінні**:
+bash
+  user=$(whoami)
+  echo "Користувач: $user"
+- **Розгалуження (`if`)**:
+  bash
+  if [ $mem_percent -gt 80 ]; then
+      echo "Високе використання пам’яті!"
+  else
+      echo "Норма."
+  fi
+ 
+- **Цикли (`for`)**:
+ bash
+  for i in {1..3}; do
+      echo "Ітерація $i"
+  done
+
+
+---
+
+### 4. Команди для периферійних пристроїв
+- **`lsusb`**: USB-пристрої.
+  bash
+  lsusb
+- **`lspci`**: PCI-пристрої.
+  bash
+  lspci
+  
+- **`lsblk`**: Блокові пристрої (диски, флешки).
+  bash
+  lsblk
+
+
+---
+
+### 5. Можливості `gparted`
+- Створення, видалення, зміна розміру розділів.
+- Форматування (ext4, NTFS, FAT32).
+- Копіювання/переміщення розділів.
+- Перевірка та виправлення помилок.
+- Керування прапорами (наприклад, `boot`).
+- Підтримка MBR/GPT.
+- Встановлення:
+  bash
+  sudo apt install gparted
+  sudo gparted
+
+
+## Висновок
+
+**Мета роботи** полягала в отриманні практичних навичок роботи з командною оболонкою Bash та ознайомленні з базовими діями при створенні скриптових сценаріїв. У процесі виконано розробку Bash-скриптів для виведення системної інформації, моніторингу ресурсів і автоматизації задач, що дозволило поглибити розуміння роботи з терміналом і сценаріями в Linux.
+
+**Матеріальне забезпечення** включало:
+1. ЕОМ типу IBM PC.
+2. ОС Windows із віртуальною машиною VirtualBox (Oracle).
+3. ОС GNU/Linux (дистрибутив Ubuntu).
+4. Сайт Cisco NetAcad (netacad.com) та його онлайн-курси з Linux.
