--- a/ЛР8.md
+++ b/ЛР8.md
@@ -196,7 +196,7 @@
 
 
 ## Хід роботи
-## Таблиця для опису команд
+## 1. Таблиця для опису команд
 
 
 | Команда     | Призначення та функціонал                                                                 |
@@ -223,8 +223,39 @@
 
 
 
+# 2. Практичні завдання у терміналs
 
 
+## 1.Команда cat – призначення
+
+Команда cat (concatenate) використовується для:
+
+- перегляду вмісту файлів;
+
+- створення нових файлів;
+
+- об’єднання (склеювання) кількох файлів;
+
+- перенаправлення вмісту файлу.
+
+## 2. Команда dig – можливості:
+Використовується для діагностики DNS:
+
+- Перевірка IP-адрес доменів;
+
+- Отримання записів NS, MX, TXT тощо;
+
+- Тестування роботи DNS-серверів.
+
+## 3. Команда netstat – можливості:
+
+Використовується для аналізу мережевих з’єднань:
+
+- Перегляд відкритих портів;
+
+- Список з’єднань і процесів;
+
+- Таблиця маршрутизації.
 
 
 ![Image](https://github.com/user-attachments/assets/d38a25ec-b73f-4dc2-a7b5-2bed11f6503b)
