--- a/ЛР8.md
+++ b/ЛР8.md
@@ -269,7 +269,68 @@
 ![Image](https://github.com/user-attachments/assets/e8ac86c4-cfdb-4fd0-a46c-cef70710d847)
 ![Image](https://github.com/user-attachments/assets/79623b5c-fcee-471f-a232-ba05c8da5548)
 
+# Відповіді на контрольні запитання
+1. Зв'язок між cat та tac
 
+- cat (concatenate): виводить вміст файлу від початку до кінця
+
+- tac (cat навпаки): виводить вміст файлу від кінця до початку (рядки у зворотному порядку)
+
+2. Призначення ss
+
+    ss (Socket Statistics): показує статистику мережевих з'єднань:
+
+- Відкриті порти
+
+- Активні підключення
+
+- Стан сокетів
+
+- Замінник застарілої команди netstat
+
+3. Відмінність ps --forest vs pstree
+Команда	Відмінності
+ps --forest	Показує дерево процесів тільки для поточної сесії
+pstree	Показує повне дерево всіх процесів у системі з ASCII-графікою
+4. Каталоги налаштувань системи
+
+    Основні: /etc/
+
+    Додаткові:
+- /etc/default/ - налаштування служб
+- /etc/sysconfig/ - конфігурація системи (RHEL/CentOS)
+- /etc/systemd/ - конфігурація systemd
+
+5. Каталоги програм для користувачів
+
+- /usr/bin/ - основні програми
+
+- /usr/local/bin/ - локально встановлені програми
+
+-  /opt/ - програми сторонніх розробників
+
+6. Каталоги системних програм
+
+- Для всіх користувачів: /usr/sbin/
+
+- Тільки для root: /sbin/
+
+- Системні утиліти: /usr/local/sbin/
+
+7. Призначення мережевих команд
+Команда	Призначення
+- ping	Перевірка доступності хоста (ICMP-запити)
+- ifconfig	Налаштування мережевих інтерфейсів (застаріла, використовуйте ip)
+- traceroute	Визначення шляху пакетів до цільового хоста
+
+9. Назви мережевих інтерфейсів
+    Традиційні: eth0, eth1 (Ethernet), wlan0 (Wi-Fi)
+    Сучасні: enp0s3, ens33 (Predictable Network Interface Names)
+
+10. Вивід параметрів одного інтерфейсу через ifconfig
+- ifconfig eth1
+або для сучасних систем з ip:
+- ip addr show dev eth1
 
 
 
