--- a/ЛР7.md
+++ b/ЛР7.md
@@ -196,12 +196,17 @@ bash
   sudo gparted
 
 
+Ось перефразований варіант у Markdown-форматі:
+
+
 ## Висновок
 
-**Мета роботи** полягала в отриманні практичних навичок роботи з командною оболонкою Bash та ознайомленні з базовими діями при створенні скриптових сценаріїв. У процесі виконано розробку Bash-скриптів для виведення системної інформації, моніторингу ресурсів і автоматизації задач, що дозволило поглибити розуміння роботи з терміналом і сценаріями в Linux.
+**Метою роботи** було набуття практичних навичок використання командної оболонки Bash, а також ознайомлення з основними принципами створення скриптів. У ході виконання завдань були розроблені Bash-скрипти для виведення інформації про систему, моніторингу ресурсів та автоматизації типових задач. Це сприяло кращому розумінню роботи з терміналом і основами сценарного програмування в середовищі Linux.
 
-**Матеріальне забезпечення** включало:
-1. ЕОМ типу IBM PC.
-2. ОС Windows із віртуальною машиною VirtualBox (Oracle).
-3. ОС GNU/Linux (дистрибутив Ubuntu).
-4. Сайт Cisco NetAcad (netacad.com) та його онлайн-курси з Linux.
+**Матеріальне забезпечення**:
+1. Персональний комп’ютер типу IBM PC.
+2. Операційна система Windows з віртуальною машиною VirtualBox (Oracle).
+3. Операційна система GNU/Linux (дистрибутив Ubuntu).
+4. Освітній ресурс Cisco NetAcad (netacad.com) та його онлайн-курси з Linux.
+```
+
