--- a/ЛР6.md
+++ b/ЛР6.md
@@ -37,60 +37,94 @@
 14. **File Extension** – Suffix indicating format (e.g., `.gz`, `.bz2`, `.xz`).
 15. **Recursive** – Processes all files in directories and subdirectories.
 
-# Відповіді на питання
-
-# Linux Commands Overview
-
-## Compression and Archiving Commands
-
-1. **`tar`** – Creates/extracts archives.  
-   - `-c`: Create, `-x`: Extract, `-t`: List, `-v`: Verbose, `-f`: File, `-z`: gzip, `-j`: bzip2, `-J`: xz.  
-   - Install: `sudo apt install tar`
-
-2. **`xz`** – High compression with LZMA2.  
-   - `-d`: Decompress, `-c`: To stdout, `-l`: Stats, `-0 to -9`: Level, `-e`: Extreme.  
-   - Install: `sudo apt install xz-utils`
-
-3. **`zip`** – Cross-platform compression.  
-   - `-r`: Recursive, `-d`: Delete, `-u`: Update, `-9`: Max compression.  
-   - Install: `sudo apt install zip unzip`
-
-4. **`bzip2`** – Strong compression, slower than gzip.  
-   - `-d`: Decompress, `-s`: Low memory, `-1 to -9`: Block size.  
-   - Install: `sudo apt install bzip2`
-
-5. **`gzip`** – Fast compression with DEFLATE.  
-   - `-d`: Decompress, `-r`: Recursive, `-c`: To stdout, `-1 to -9`: Level.  
-   - Install: `sudo apt install gzip`
-
-### Examples
-1. `tar -czvf archive.tar.gz /path/dir` – Archive and gzip.  
-2. `xz -9 file.txt` – Compress `file.txt` to `file.txt.xz`.  
-3. `zip -r archive.zip /path/dir` – Zip a directory.
+Ось перефразований текст у Markdown-форматі з збереженням обсягу та структури:
 
 ---
 
-## File Viewing Commands
+# Огляд команд Linux
 
-1. **`cat`** – Displays/concatenates files.  
-   - `-n`: Number lines, `-b`: Number non-empty, `>`: Redirect.  
-   - Install: `sudo apt install coreutils`
+## Команди стиснення та архівації
 
-2. **`less`** – Paged file viewer with scrolling.  
-   - `-N`: Line numbers, `-S`: No wrap.  
-   - Install: `sudo apt install coreutils`
+1. **`tar`** – Створення та розпакування архівів.
 
-3. **`more`** – Paged viewer (forward only).  
-   - `-d`: Prompts, `+n`: Start at line n.  
-   - Install: `sudo apt install coreutils`
+   * Опції: `-c` (створити), `-x` (витягти), `-t` (переглянути), `-v` (детально), `-f` (файл), `-z` (gzip), `-j` (bzip2), `-J` (xz).
+   * Встановлення: `sudo apt install tar`
 
-4. **`head`** – Shows first lines (default: 10).  
-   - `-n N`: N lines, `-c N`: N bytes.  
-   - Install: `sudo apt install coreutils`
+2. **`xz`** – Потужне стиснення за допомогою LZMA2.
 
-5. **`tail`** – Shows last lines (default: 10).  
-   - `-n N`: N lines, `-f`: Follow updates.  
-   - Install: `sudo apt install coreutils`
+   * Опції: `-d` (розпакувати), `-c` (вивести у stdout), `-l` (статистика), `-0` до `-9` (рівень), `-e` (екстремальне стиснення).
+   * Встановлення: `sudo apt install xz-utils`
+
+3. **`zip`** – Універсальне кросплатформне стиснення.
+
+   * Опції: `-r` (рекурсивно), `-d` (видалити), `-u` (оновити), `-9` (макс. стиснення).
+   * Встановлення: `sudo apt install zip unzip`
+
+4. **`bzip2`** – Ефективне, але повільніше за gzip стиснення.
+
+   * Опції: `-d` (розпакування), `-s` (менше пам’яті), `-1` до `-9` (розмір блоку).
+   * Встановлення: `sudo apt install bzip2`
+
+5. **`gzip`** – Швидке стиснення за алгоритмом DEFLATE.
+
+   * Опції: `-d` (розпакувати), `-r` (рекурсивно), `-c` (вивід у stdout), `-1` до `-9` (рівень).
+   * Встановлення: `sudo apt install gzip`
+
+### Приклади
+
+1. `tar -czvf archive.tar.gz /path/dir` – Створення архіву з gzip.
+2. `xz -9 file.txt` – Стиснення `file.txt` у `file.txt.xz`.
+3. `zip -r archive.zip /path/dir` – Запакування директорії у zip.
+
+---
+
+## Команди перегляду файлів
+
+1. **`cat`** – Виводить або об’єднує вміст файлів.
+
+   * Опції: `-n` (нумерувати рядки), `-b` (нумерувати лише непорожні), `>` (перенаправлення).
+   * Встановлення: `sudo apt install coreutils`
+
+2. **`less`** – Погодинний перегляд із прокруткою.
+
+   * Опції: `-N` (номер рядків), `-S` (без переносу рядків).
+   * Встановлення: `sudo apt install coreutils`
+
+3. **`more`** – Пошаговий перегляд (тільки вперед).
+
+   * Опції: `-d` (підказки), `+n` (почати з n-рядка).
+   * Встановлення: `sudo apt install coreutils`
+
+4. **`head`** – Виводить початок файлу (за замовчуванням: 10 рядків).
+
+   * Опції: `-n N` (показати N рядків), `-c N` (N байт).
+   * Встановлення: `sudo apt install coreutils`
+
+5. **`tail`** – Виводить останні рядки (за замовчуванням: 10 рядків).
+
+   * Опції: `-n N` (показати N рядків), `-f` (слідкувати за оновленням).
+   * Встановлення: `sudo apt install coreutils`
+
+---
+
+## Конвеєри, потоки та фільтри Shell
+
+* **Потоки**: `stdin` (0), `stdout` (1), `stderr` (2).
+* **Конвеєри (`|`)**: Передають `stdout` в `stdin` наступної команди (напр., `ls | grep "txt"`).
+* **Фільтри**: Обробляють потоки даних (напр., `grep`, `sort`).
+* **Перенаправлення**: `>` (перезапис), `>>` (додавання), `<` (ввід).
+* Можна об'єднувати прості команди в складні операції.
+
+---
+
+## Команда `grep`
+
+* **Призначення**: Пошук шаблонів у тексті або файлах.
+* **Приклади**: `grep "error" log.txt`, `ls | grep "txt"`.
+* **Опції**: `-i` (ігнорувати регістр), `-r` (рекурсивно), `-n` (номери рядків), `-v` (виключити збіги).
+
+---
+
 
 ---
 
