--- a/ЛР6.md
+++ b/ЛР6.md
@@ -37,13 +37,14 @@
 14. **File Extension** – Suffix indicating format (e.g., `.gz`, `.bz2`, `.xz`).
 15. **Recursive** – Processes all files in directories and subdirectories.
 
-Ось перефразований текст у Markdown-форматі з збереженням обсягу та структури:
+
 
 ---
+# Відповіді на контрольні Запитання
 
-# Огляд команд Linux
+## Огляд команд Linux
 
-## Команди стиснення та архівації
+### Команди стиснення та архівації
 
 1. **`tar`** – Створення та розпакування архівів.
 
