--- a/ЛР7.md
+++ b/ЛР7.md
@@ -199,7 +199,7 @@ bash
 
 
 
-## Висновок
+## Висновок (Рубель Станіслав)
 
 **Метою роботи** було набуття практичних навичок використання командної оболонки Bash, а також ознайомлення з основними принципами створення скриптів. У ході виконання завдань були розроблені Bash-скрипти для виведення інформації про систему, моніторингу ресурсів та автоматизації типових задач. Це сприяло кращому розумінню роботи з терміналом і основами сценарного програмування в середовищі Linux.
 
