--- a/ЛР7.md
+++ b/ЛР7.md
@@ -202,11 +202,12 @@ bash
 ## Висновок (Рубель Станіслав)
 
 **Метою роботи** було набуття практичних навичок використання командної оболонки Bash, а також ознайомлення з основними принципами створення скриптів. У ході виконання завдань були розроблені Bash-скрипти для виведення інформації про систему, моніторингу ресурсів та автоматизації типових задач. Це сприяло кращому розумінню роботи з терміналом і основами сценарного програмування в середовищі Linux.
+Під час роботи опрацювання лабораторної роботи я набув знання з конфігурації та даних архітектури, процесора комп'ютера. За допомогою команд яких можна дізнатися додаткову інформацію про ОС
 
 **Матеріальне забезпечення**:
 1. Персональний комп’ютер типу IBM PC.
 2. Операційна система Windows з віртуальною машиною VirtualBox (Oracle).
 3. Операційна система GNU/Linux (дистрибутив Ubuntu).
 4. Освітній ресурс Cisco NetAcad (netacad.com) та його онлайн-курси з Linux.
-```
+
 
