--- a/ЛР9.md
+++ b/ЛР9.md
@@ -1,1 +1,114 @@
+# Лабораторна робота №9
 
+## Тема: Захист системи та користувачів у Linux. Створення користувачів та груп.
+
+## Мета: Отримання практичних навиків роботи з командною оболонкою Bash. Знайомство з базовими діями при створенні нових користувачів та нових груп користувачів.
+
+### Словник базових термінів:
+- command – команда; інструкція, яку користувач вводить у терміналі для виконання дії.
+- option – параметр; додається до команди для зміни її поведінки (наприклад, -l, --help).
+- sudo – виконує команду від імені адміністратора (superuser).
+- su – перемикає користувача на інший обліковий запис, зазвичай root.
+- root – головний користувач з повними правами доступу до системи.
+- user – звичайний користувач із обмеженими правами.
+- group – група користувачів, яким можна призначати спільні права доступу.
+- UID (User ID) – унікальний числовий ідентифікатор користувача.
+- GID (Group ID) – унікальний числовий ідентифікатор групи.
+- passwd – файл або команда, пов’язана з керуванням паролями та обліковими записами.
+- /etc/passwd – системний файл, що містить основну інформацію про користувачів.
+- /etc/group – системний файл, що містить інформацію про групи.
+- groupadd – команда для створення нової групи.
+- groupmod – команда для зміни параметрів існуючої групи.
+
+## Відповіді на питання:
+
+### 1. Розкрийте поняття UPG, коли їх доцільно використовувати:
+UPG (User Private Group) — це приватна група, яка автоматично створюється для кожного нового користувача на деяких дистрибутивах Linux. Ім’я групи збігається з ім’ям користувача, і єдиним учасником цієї групи є сам користувач. UPG доцільно використовувати у системах, де потрібно надати кожному користувачеві ізольоване середовище для файлів, а також дозволити керування правами доступу через групи без створення зайвих колективних груп. Це спрощує контроль над файлами та дозволяє легко налаштовувати спільний доступ лише в разі потреби.
+
+### 2. Якими командами можна створити групи користувачів? 
+Для створення групи використовується команда `groupadd`.
+
+* Створити нову групу з ім’ям `students`:
+
+  ```
+  sudo groupadd students
+  ```
+* Створити групу `devs` з вказаним GID (груповим ідентифікатором) 505:
+
+  ```
+  sudo groupadd -g 505 devs
+  ```
+
+### 3. Якими командами можна змінити налаштування груп користувачів? 
+Для зміни налаштувань групи використовується команда `groupmod`.
+
+* Змінити ім’я групи з `sales` на `clerks`:
+
+  ```
+  sudo groupmod -n clerks sales
+  ```
+* Змінити GID групи `devs` на 600:
+
+  ```
+  sudo groupmod -g 600 devs
+  ```
+
+Зміна імені групи не впливає на доступ до файлів, оскільки система використовує GID, а от зміна GID без відповідного оновлення власності файлів може призвести до втрати асоціації файлів із групою.
+
+# Хід роботи
+
+## Таблиця опису команд
+
+| **Назва команди** | **Її призначення та функціональність**                          |
+| ----------------- | --------------------------------------------------------------- |
+| `ls`              | Перегляд вмісту каталогу                                        |
+| `groupdel`        | Видаляє існуючу групу                                           |
+| `head`            | Виводить перші 10 рядків файлу                                  |
+| `useradd`         | Створює нового користувача                                      |
+| `w`               | Показує, хто увійшов у систему і чим займається                 |
+| `groupadd`        | Створює нову групу                                              |
+| `usermod`         | Змінює параметри існуючого користувача                          |
+| `nano`            | Проста текстова консольна програма для редагування файлів       |
+| `id`              | Показує UID, GID та групи поточного або вказаного користувача   |
+| `who`             | Показує, хто увійшов у систему                                  |
+| `getent`          | Вивід записів з баз даних                                       |
+| `passwd`          | Змінює пароль користувача                                       |
+| `grep`            | Пошук рядків, що відповідають шаблону, у файлі або потоці даних |
+| `last`            | Виводить історію входів користувачів у систему                  |
+| `userdel`         | Видаляє користувача                                             |
+| `groupmod`        | Змінює параметри існуючої групи                                 |
+
+## Практичні завдання
+
+![Image](https://github.com/user-attachments/assets/4adb3079-9f0c-4855-a6e0-db53315b02b1)   1
+
+![Image](https://github.com/user-attachments/assets/c46c0a6d-ea1b-4cf4-b543-a15ebf210525)   2
+
+![Image](https://github.com/user-attachments/assets/1a2b0bd3-9410-49b4-bff0-290b1d8b59cf)   3
+
+![Image](https://github.com/user-attachments/assets/80b402a5-c5f5-4da1-8652-59899e53fd2a)   4 
+
+![Image](https://github.com/user-attachments/assets/951a46ee-2503-403e-a351-d4af85f33d98)   5
+
+![Image](https://github.com/user-attachments/assets/6fd8f803-8c7f-436a-997e-88bc387cf8f3)   6
+
+![Image](https://github.com/user-attachments/assets/8e8db432-2c6f-4789-a7a8-3ff4bc272b3a)   7
+
+![Image](https://github.com/user-attachments/assets/18100f3a-c7eb-4894-9285-2b550149a777)   8  
+
+![Image](https://github.com/user-attachments/assets/320f31f7-faec-41c5-a847-7423032c7451)   9
+
+
+
+
+
+# Відповіді на контрольні запитання
+1. Паролі не зберігаються в конфігураційних файлах у відкритому вигляді для забезпечення безпеки — замість цього використовується хешування, щоб навіть у разі доступу до файлів зловмисник не міг дізнатись справжній пароль.
+2. Не рекомендується працювати під обліковим записом root у повсякденній роботі, оскільки це збільшує ризик випадкових або шкідливих дій, які можуть зашкодити системі.
+3. Команда `su` перемикає користувача на інший обліковий запис (зазвичай root) і вимагає пароль цього облікового запису, тоді як `sudo` дозволяє виконати одну команду з правами адміністратора, використовуючи пароль поточного користувача з відповідними правами.
+4. Домашній каталог root не розміщено в /home для зменшення ризику пошкодження або випадкового доступу до критичних файлів root-користувача, а також для ізоляції від звичайних користувачів.
+5. Команда `getent` використовується для отримання записів із різних баз даних системи, таких як користувачі, групи, хости, особливо у випадках використання мережевої автентифікації.
+6. Пароль користувача можна змінити за допомогою команди `passwd`, яку потрібно виконати від імені root або самого користувача.
+7. Існуючу групу можна видалити командою `groupdel groupname`; після видалення записи в /etc/group зникають, але файли, яким належала ця група, залишаються з числовим GID.
+8. Команда `chage` використовується для керування політикою терміну дії пароля, наприклад, встановлення дати завершення дії пароля або примусового оновлення.
+9. Найбільш використовуваними параметрами команди `usermod` є `-aG` (додавання до групи), `-l` (зміна імені користувача), `-d` (зміна домашнього каталогу) та `-s` (зміна оболонки входу).
