--- a/ЛР10.md
+++ b/ЛР10.md
@@ -1,1 +1,29 @@
+# Лабораторна робота №10
+##Т ема: “Зміна власників і прав доступу до файлів в Linux. Спеціальні каталоги та файли в Linux”
 
+## Мета роботи: 
+Отримання практичних навиків роботи з командною оболонкою Bash.
+Знайомство з базовими діями при зміні власників файлів, .прав доступу до файлів 
+Знайомство з спеціальними каталогами та файлами в Linux.
+
+
+## Словник базових англійських термінів
+
+| №  | **Англійське слово / команда** | **Українське пояснення**                                           |
+| -- | ------------------------------ | ------------------------------------------------------------------ |
+| 1  | `ls -la`                       | Показ усіх файлів (включно з прихованими) з детальною інформацією. |
+| 2  | `chmod`                        | Зміна прав доступу до файлу чи папки.                              |
+| 3  | `chown`                        | Зміна власника файлу.                                              |
+| 4  | `chgrp`                        | Зміна групи-власника файлу.                                        |
+| 5  | `id`                           | Показує UID, GID та групи користувача.                             |
+| 6  | `groups`                       | Показує, до яких груп належить користувач.                         |
+| 7  | `newgrp`                       | Тимчасова зміна основної групи користувача.                        |
+| 8  | `touch`                        | Створення нового (порожнього) файлу.                               |
+| 9  | **User / Owner**               | Користувач / Власник файлу.                                        |
+| 10 | **Group**                      | Група користувачів.                                                |
+| 11 | **UID / GID**                  | Унікальні числові ідентифікатори користувача і групи.              |
+| 12 | **Read (r)**                   | Право читання файлу або каталогу.                                  |
+| 13 | **Write (w)**                  | Право зміни вмісту файлу або каталогу.                             |
+| 14 | **Execute (x)**                | Право виконання (файлу або доступу до каталогу).                   |
+| 15 | **Setuid / Setgid**            | Спецдозволи: виконання з правами власника або групи.               |
+| 16 | **Sticky bit**                 | Забороняє видалення файлів у каталозі іншим користувачам.          |
